# mint

./: .gitattributes  .gitignore  README.md  config.json  flake.nix  installer.py  mint.bat  mint.py  pyproject.toml  setup.bat  setup.py  setup.sh
.github/workflows/: publish.yml
packaging/aur/: PKGBUILD
packaging/choco/: mint.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
scripts/: compute-checksums.sh
